# runpod-worker-instantid

./: Dockerfile.Network_Volume  Dockerfile.Standalone  README.md  docker-bake.hcl  pyproject.toml  start_network_volume.sh  start_standalone.sh
.github/: dependabot.yml
.github/workflows/: build-docker-image.yml  run-tests.yml
docs/building/: with-network-volume.md  without-network-volume.md
docs/testing/: local.md
examples/: generate.py
scripts/: install.sh
src/: constraints.txt  download_checkpoints.py  handler.py  model_util.py  pipeline_stable_diffusion_xl_instantid.py  requirements.txt
tests/: conftest.py  test_download_checkpoints.py  test_handler.py  test_model_util.py  test_pipeline.py
